fixed issue with z-index

--- a/css/index.css
+++ b/css/index.css
@@ -509,7 +509,7 @@ body main {
   grid-row: 1/2;
   min-width: 100vw;
   width: 100vw;
-  z-index: 2;
+  z-index: 3;
   -webkit-backdrop-filter: blur(50px);
   backdrop-filter: blur(50px);
   border-bottom: 1px solid #fff;
