--- a/sass/_landing.sass
+++ b/sass/_landing.sass
@@ -17,7 +17,7 @@
         grid-row: 1/2
         min-width: 100vw
         width: 100vw
-        z-index: 2
+        z-index: 3
         // overflow: hidden
         +backdrop-blur()
         border-bottom: 1px solid #fff
